[project]
name = "collectiondict"
version = "0.5.0"
description = "Helpers to create dictionaries that collect values into collections"
authors = [ { name = "Max Görner", email ="5477952+MaxG87@users.noreply.github.com" } ]
license = "BSD-3-Clause"
readme = "README.md"
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Topic :: Software Development :: Libraries",
]
requires-python = ">=3.9"

[project.urls]
Homepage = "https://github.com/MaxG87/collectiondict/"
Repository = "https://github.com/MaxG87/collectiondict/"
Issues = "https://github.com/MaxG87/collectiondict/issues"
Changelog = "https://github.com/MaxG87/collectiondict/blob/main/CHANGELOG.md"

[dependency-groups]
dev = [
    "black>=25.1.0",
    "hypothesis>=6.125.3",
    "mypy>=1.15.0",
    "pdbpp>=0.10.3",
    "pynvim>=0.5.2",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "pytest-xdist>=3.6.1",
    "ruff>=0.9.6",
]


[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
hypothesis = "^6.99.9"
pytest = "^8.1.1"
pynvim = "^0.5.0"
pdbpp = "^0.10.3"
pytest-cov = ">=3,<7"
mypy = "^1.9.0"
black = ">=24.3,<26.0"
ruff = ">=0.8,<0.10"
pytest-xdist = "^3.5.0"

[tool.mypy]
allow_any_unimported = false
warn_unreachable = true
enable_error_code = [
    "possibly-undefined"
]
strict = true

[tool.pytest.ini_options]
addopts = [
    "--cov", "src",
    "--doctest-modules",
    "--doctest-glob", "*.md",
    "--cov-branch",
    "--cov-fail-under", "95"
]

[tool.ruff]
src = [".", "src/"]

[tool.ruff.lint]
select = ["A", "B", "C", "F", "I", "ISC", "PIE", "PL", "Q", "RUF", "SIM", "TID", "W", "YTT"]
ignore = ["E", "PLC1901", "SIM117"]

[tool.ruff.lint.mccabe]
max-complexity = 6

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
